<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/eventDetailsScrollView"
    android:background="@color/primary_background_pages"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Event Name -->
        <TextView
            android:id="@+id/eventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="16dp" />

        <!-- Placeholder for Photo/Poster -->
        <androidx.cardview.widget.CardView
            android:id="@+id/photoPlaceholder"
            android:layout_width="363dp"
            android:layout_height="204dp"
            android:backgroundTint="@color/secondary_background_cards"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="16dp"
            android:background="#D3D3D3"
            app:cardCornerRadius="16dp">

            <!-- ImageView for displaying the event poster -->
            <ImageView
                android:id="@+id/eventPoster"
                android:layout_width="362dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:visibility="visible" />

        </androidx.cardview.widget.CardView>


        <!-- Event Description in a box -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:id="@+id/descriptionCardView"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/secondary_background_cards"
            android:layout_marginBottom="16dp"
            android:background="#F0F0F0"
            app:cardCornerRadius="16dp">

            <TextView
                android:id="@+id/eventDescription"
                android:backgroundTint="@color/secondary_background_cards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:background="#F0F0F0"
                android:padding="12dp"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <!-- Event Location -->
        <TextView
            android:id="@+id/eventLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <!-- Waitlist Open Date -->
        <TextView
            android:id="@+id/waitlistOpenDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <!-- Waitlist Close Date -->
        <TextView
            android:id="@+id/waitlistCloseDate"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <!-- Event Date -->
        <TextView
            android:id="@+id/eventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <!-- Waitlist Limit -->
        <TextView
            android:id="@+id/waitlistLimit"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <!-- Entrant Limit -->
        <TextView
            android:id="@+id/entrantLimit"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <!-- Organizer Name -->
        <TextView
            android:id="@+id/organizerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp" />

        <!-- Buttons to View Entrant Lists as well as lottery button-->


        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2"
            android:layout_marginBottom="8dp"
            app:orientation="horizontal">

            <LinearLayout
                android:id="@+id/runLotteryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/square_button_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="0">

                <ImageView
                    android:id="@+id/runLotteryImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_lottery" />

                <TextView
                    android:id="@+id/runLotteryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Run Lottery" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/clearListsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/square_button_background"
                android:padding="16dp"
                app:layout_columnWeight="1">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_clear" />

                <TextView
                    android:id="@+id/clearListsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clear Lists"
                    android:gravity="center" />
            </LinearLayout>

        <!-- Button for View QR -->
            <LinearLayout
                android:id="@+id/viewQRCodeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/square_button_background"
                android:padding="16dp"
                app:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/viewQRCodeButtonImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_qr" />

                <TextView
                    android:id="@+id/viewQRCodeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View QR Code"
                    android:gravity="center" />
            </LinearLayout>

        <!-- Button for View Map -->
            <LinearLayout
                android:id="@+id/viewMapButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="2dp"
                android:gravity="center"
                android:background="@drawable/square_button_background"
                android:padding="16dp"
                app:layout_columnWeight="1">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_map" />

                <TextView
                    android:id="@+id/viewMapText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View Map"
                    android:gravity="center" />
            </LinearLayout>

    </androidx.gridlayout.widget.GridLayout>
        <Button
            android:id="@+id/viewRegisteredEntrants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darker_teal"
            android:text="View Registered Entrants"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/viewWaitlistedEntrants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darker_teal"
            android:text="View Waitlisted Entrants"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/viewInvitedEntrants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darker_teal"
            android:text="View Invited Entrants"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/viewDeclinedEntrants"
            android:layout_width="match_parent"
            android:backgroundTint="@color/darker_teal"
            android:layout_height="wrap_content"
            android:text="View Declined Entrants"
            android:layout_marginBottom="8dp" />

    </LinearLayout>
</ScrollView>