...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Event Name" />
        <EditText
            android:id="@+id/inputEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/white"
            android:hint="Enter event name"
            android:layout_marginBottom="12dp"
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Location" />
        <EditText
            android:id="@+id/inputEventLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter location"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_text_color"
            android:layout_marginBottom="12dp"
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Registration Opens (YYYY-MM-DD)" />
        <TextView
            android:id="@+id/inputRegistrationOpens"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_text_color"
            android:layout_height="wrap_content"
            android:hint="Select registration open date"
            android:layout_marginBottom="12dp"
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Registration Deadline (YYYY-MM-DD)" />
        <TextView
            android:id="@+id/inputRegistrationDeadline"
            android:layout_width="match_parent"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:hint="Select registration deadline"
            android:layout_marginBottom="12dp"
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Event Date (YYYY-MM-DD)" />
        <TextView
            android:id="@+id/inputEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_text_color"
            android:hint="Select event date"
            android:layout_marginBottom="12dp"
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Description" />
        <EditText
            android:id="@+id/inputEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter description"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/white"
            android:inputType="textMultiLine"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Occupant Limit"
            android:id="@+id/LabelOccupantLimit" />
        <EditText
            android:id="@+id/inputOccupantLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/white"
            android:hint="Enter occupant limit"
            android:inputType="number"
...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkboxWaitlistLimit"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:buttonTint="#FFFFFF"/>

            <TextView
...
            android:layout_height="wrap_content"
            android:text="Set Waitlist Limit"
            android:textColor="@color/white"
            android:visibility="gone"
            android:id="@+id/labelWaitlistLimit" />
        <EditText
            android:id="@+id/inputWaitlistLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter limit"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/white"
            android:inputType="number"
            android:visibility="gone"
            android:layout_marginBottom="16dp" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/btnCreateEvent"
            android:layout_width="match_parent"
            android:backgroundTint="@color/darker_teal"
            android:layout_height="wrap_content"
            android:text="Create Event" />
    </LinearLayout>
</ScrollView>
...
