<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_pages"
    android:padding="16dp">

    <!-- Vertical Layout for the Dashboard -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Title for the dashboard -->
        <TextView
            android:id="@+id/dashboardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textColor="@color/white"
            android:text="Upcoming Events"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Search bar below the title -->

        <!-- RecyclerView to display the list of events -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/eventsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp" />
    </LinearLayout>

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCreateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="Create Event"
        android:src="@drawable/ic_add_event"
        app:tint="@color/white"
        app:backgroundTint="@color/darker_teal" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
