...
    android:orientation="vertical"
    android:background="@color/primary_background_pages"
    android:padding="16dp">

    <!-- Title for Invited Entrants -->
    <TextView
        android:id="@+id/invitedEntrantsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:textColor="@color/white"
        android:text="Invited Entrants"
        android:textSize="24sp"
...
        android:layout_centerInParent="true"
        android:textSize="16sp"
        android:textColor="@color/darker_teal" />

    <!-- RecyclerView to display invited entrants -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/invitedEntrantsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/invitedEntrantsTitle"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical" />

...
